--- a/MarsRoverKata.Domain/MarsRoverKata.Domain.csproj
+++ b/MarsRoverKata.Domain/MarsRoverKata.Domain.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Coordinate.cs" />
     <Compile Include="Direction.cs" />
+    <Compile Include="Grid.cs" />
     <Compile Include="Navigator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rover.cs" />
