--- a/MarsRoverKata.Domain/MarsRoverKata.Domain.csproj
+++ b/MarsRoverKata.Domain/MarsRoverKata.Domain.csproj
@@ -43,11 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandExecutor.cs" />
     <Compile Include="Coordinate.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="Grid.cs" />
-    <Compile Include="Navigator.cs" />
+    <Compile Include="IOrientationStateHandler.cs" />
+    <Compile Include="LeftOrientationStateHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RightOrientationStateHandler.cs" />
     <Compile Include="Rover.cs" />
   </ItemGroup>
   <ItemGroup>
