--- a/MarsRoverKata.Domain/MarsRoverKata.Domain.csproj
+++ b/MarsRoverKata.Domain/MarsRoverKata.Domain.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Coordinate.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="Grid.cs" />
-    <Compile Include="IOrientationStateHandler.cs" />
+    <Compile Include="OrientationStateHandler.cs" />
     <Compile Include="LeftOrientationStateHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RightOrientationStateHandler.cs" />
