--- a/MarsRoverKata.Domain/MarsRoverKata.Domain.csproj
+++ b/MarsRoverKata.Domain/MarsRoverKata.Domain.csproj
@@ -43,11 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bearing.cs" />
+    <Compile Include="CommandsMapper.cs" />
     <Compile Include="Coordinate.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="Grid.cs" />
+    <Compile Include="ICommand.cs" />
+    <Compile Include="Invoker.cs" />
+    <Compile Include="LeftCommand.cs" />
+    <Compile Include="MoveCommand.cs" />
     <Compile Include="Navigator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RightCommand.cs" />
     <Compile Include="Rover.cs" />
   </ItemGroup>
   <ItemGroup>
