--- a/MarsRoverKata.Domain/MarsRoverKata.Domain.csproj
+++ b/MarsRoverKata.Domain/MarsRoverKata.Domain.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bearing.cs" />
     <Compile Include="Coordinate.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="Grid.cs" />
